Add Log in file logic and edit unacceptable mathimatical  cases

--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogicClass.cs" />
+    <Compile Include="Loger.cs" />
     <Compile Include="NunitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
